...
                                <rect key="frame" x="45" y="64" width="319" height="103"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="display"/>
                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="37" y="184" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="sevenButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
                                <state key="normal" title="7" backgroundImage="b4.png">
...
                                <rect key="frame" x="277" y="184" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="nineButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
                                <state key="normal" title="9" backgroundImage="b4.png">
...
                                <rect key="frame" x="37" y="284" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="fourButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
                                <state key="normal" title="4" backgroundImage="b4.png">
...
                                <rect key="frame" x="157" y="284" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="fiveButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
                                <state key="normal" title="5" backgroundImage="b4.png">
...
                                <rect key="frame" x="277" y="284" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="sixButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
                                <state key="normal" title="6" backgroundImage="b4.png">
...
                                <rect key="frame" x="37" y="384" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="oneButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
                                <state key="normal" title="1" backgroundImage="b4.png">
...
                                <rect key="frame" x="157" y="384" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="twoButton"/>
                                <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
...
                                <rect key="frame" x="277" y="384" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="threeButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="61"/>
                                <state key="normal" title="3" backgroundImage="b4.png">
...
                                <rect key="frame" x="37" y="484" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="evalButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="EVAL" backgroundImage="b4.png">
...
                                <rect key="frame" x="277" y="484" width="90" height="90"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="clearButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="CLEAR" backgroundImage="b4.png">
...
                                <rect key="frame" x="110" y="578" width="80" height="80"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="enterButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Enter" backgroundImage="b4.png">
...
                                <rect key="frame" x="219" y="578" width="80" height="80"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="signChangeButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="+/-" backgroundImage="b4.png">
...
                                <rect key="frame" x="35" y="672" width="80" height="80"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="addition"/>
                                <fontDescription key="fontDescription" type="system" pointSize="49"/>
                                <state key="normal" title="+" backgroundImage="b4.png">
...
                                <rect key="frame" x="123" y="672" width="80" height="80"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="subtraction"/>
                                <fontDescription key="fontDescription" type="system" pointSize="49"/>
                                <state key="normal" title="-" backgroundImage="b4.png">
...
                                <rect key="frame" x="211" y="672" width="80" height="80"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="multiplication"/>
                                <fontDescription key="fontDescription" type="system" pointSize="49"/>
